--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+.operatore-grid {
+  display: inline-grid;
+  grid-template-columns: auto;
+}
+.operatore-grid button {
+  color: black;
+  background-color: thistle;
+  font-weight: bold;
+  width: 50px;
+  height: 30px;
+}
 .input-grid {
   display: inline-grid;
   grid-template-columns: auto auto auto;
